--- a/week04/static/css/signup.css
+++ b/week04/static/css/signup.css
@@ -1,9 +1,9 @@
 @font-face{
-  font-family: "YiSunShinDitumM";
+  font-family: "YiSunShinDotumM";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/YiSunShinDotumM.woff")
       font-weight: normal;
       font-style: normal;
-  }
+}
   
   body {
   background-color: #1c1c1c;
